[package]
name = "invogen"
version = "1.0.0"
edition = "2021"
author = "Aryan Kapoor"
repository = "https://github.com/Aryankpoor/Invogen"
keywords = ["invoice", "generator", "receipt"]
description = "Visually attractive command line invoice generator and allows downloading invoices"
license = "MIT"
[dependencies]
printpdf = "0.3.4"